# Bullying-risk-stratification-tool

./: Procfile  app.py  kmeans_model_Cyber Bullying.pkl  kmeans_model_Social Bullying.pkl  kmeans_model_Verbal Bullying.pkl  lightgbm_model_Cyber Bullying.pkl  lightgbm_model_Physical Bullying.pkl  lightgbm_model_Verbal Bullying.pkl  render.yaml  requirements.txt  scaler_fitted.pkl
flask_app/: Procfile  app.py  pyproject.toml  requirements.txt  wsgi.py
flask_app/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
flask_app/flaskr/: Procfile  app.py  kmeans_model_Verbal Bullying.pkl  lightgbm_model_Social Bullying.pkl  requirements.txt
flask_app/templates/: index.html
flask_app/your_application/: __init__.py  some_module.py
flaskr/: kmeans_model_Physical Bullying.pkl  wsgi.py
templates/: index.html
your_application/: app.wsgi
