[tool.poetry]
name = "bullying risk stratification"
version = "0.1.0"
description = "Identify school bullying risk level"
authors = ["Ning-pku <huangning_pku@163.com>"]
license = "3.12"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
